# CppND-CapstoneProject-KalmanFilter

./: .gitignore  CMakeLists.txt  README.md
data/: aircraft_pitch_dynamics_data.txt
src/: KalmanFilter.cpp  KalmanFilter.h  KalmanFilter_test.cpp  helperFunc.cpp  helperFunc.h
